k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expense-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expense-api
  template:
    metadata:
      labels:
        app: expense-api
    spec:
      imagePullSecrets:
        - name: ecr-secret

      containers:
      - name: expense-api
        image: 429441944962.dkr.ecr.ap-south-1.amazonaws.com/expense-api:latest
        ports:
        - containerPort: 8000

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              requests: "256Mi"
              cpu: "200m"


        livenessProbe:
           httpGet:
             path: /health
             port: 8000
           initialDelaySeconds: 10
           periodSeconds: 10

        readinessProbe:
           httpGet:
             path: /health
             port: 8000
           initialDelaySeconds: 5
           periodSeconds: 5
