k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: expense-api-service
spec:
  type: LoadBalancer
  selector:
    app: expense-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
